// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`快照正确渲染 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FAFAFA",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    isTVSelectable={true}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "bottom": 0,
        "height": 1334,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "width": 750,
        "zIndex": -1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "black",
            "bottom": 0,
            "height": 1334,
            "left": 0,
            "opacity": 0.2,
            "position": "absolute",
            "width": 750,
            "zIndex": 10,
          },
          Object {
            "backgroundColor": "white",
            "zIndex": -1,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      }
    }
  />
</View>
`;

exports[`快照正确渲染 2`] = `
<View
  detailObj="{\\"allowEditInfo\\":\\"true\\",\\"bizLics\\":[\\"https://qd.pilipa.cn/FileUploads/Order/BusinessLicense/201708/BodyPart_98b0dc29-d6d2-463e-b8d0-7e7b6ea1b833.jpg\\"],\\"bizRange\\":\\"sfdgq\\",\\"bizTime\\":{\\"startDate\\":\\"2017-08-25\\",\\"endDate\\":\\"2017-08-27\\",\\"unlimited\\":\\"false\\"},\\"contactName\\":\\"sdfgvbbbje\\",\\"contactPhone\\":\\"16167286689\\",\\"corpAddress\\":\\"sdfgw\\",\\"corpAddressArea\\":{\\"cityId\\":\\"110100\\",\\"districtId\\":\\"110115\\",\\"city\\":\\"北京市\\",\\"district\\":\\"大兴区\\"},\\"corpName\\":\\"sfgdscvv\\",\\"corpTypeId\\":1,\\"corpType\\":\\"小规模\\",\\"idCards\\":[],\\"industryId\\":2,\\"industry\\":\\"工业\\",\\"legalEntity\\":\\"Ssswcvv\\",\\"localTaxId\\":\\"1ddde\\",\\"nationalTaxId\\":\\"1hhh\\",\\"progress\\":{\\"finished\\":\\"false\\",\\"inProgress\\":false,\\"materialConfirm\\":\\"true\\"},\\"regFunds\\":\\"12\\",\\"regId\\":\\"111111s\\",\\"salesmanName\\":\\"zhangsa\\",\\"salesmanPhone\\":\\"13581665456\\",\\"stepContact\\":\\"贾雪婷\\",\\"stepId\\":2565,\\"stepName\\":\\"核实名称\\",\\"taskId\\":533,\\"taskName\\":\\"通办任务2\\",\\"taskStatus\\":\\"进行中\\"}"
  style={
    Object {
      "backgroundColor": "#FAFAFA",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    isTVSelectable={true}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "bottom": 0,
        "height": 1334,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "width": 750,
        "zIndex": -1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "black",
            "bottom": 0,
            "height": 1334,
            "left": 0,
            "opacity": 0.2,
            "position": "absolute",
            "width": 750,
            "zIndex": 10,
          },
          Object {
            "backgroundColor": "white",
            "zIndex": -1,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      }
    }
  />
</View>
`;
